--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
+    "axios": "^1.9.0",
     "echarts": "^5.6.0",
     "element-plus": "^2.9.7",
     "pinia": "^3.0.1",
+    "qs": "^6.14.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
