--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "pinia": "^3.0.1",
     "qs": "^6.14.0",
     "vue": "^3.5.13",
-    "vue-router": "^4.5.0"
+    "vue-router": "^4.5.0",
+    "vue-watermark-directive": "^1.0.0"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.0",
