--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "jiti": "^2.4.2",
     "less": "^4.3.0",
     "less-loader": "^12.2.0",
+    "mockjs": "^1.1.0",
     "npm-run-all2": "^7.0.2",
     "prettier": "^3.5.1",
     "typescript": "~5.7.3",
